--- a/themes/toha/layouts/partials/footer.html
+++ b/themes/toha/layouts/partials/footer.html
@@ -81,7 +81,7 @@
         </a>
       </div>
       <div class="col-md-4 text-center">{{ $copyrightNotice }}</div>
-      <div class="col-md-4 text-right">
+      <!-- <div class="col-md-4 text-right">
         <a id="hugo" href="https://gohugo.io/">{{ i18n "hugoAttributionText" }}
         <img
           src="{{ "/assets/images/hugo-logo-wide.svg" | relURL }}"
@@ -89,7 +89,7 @@
           height="18"
         />
         </a>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
