--- a/themes/toha/layouts/partials/navigators/navbar.html
+++ b/themes/toha/layouts/partials/navigators/navbar.html
@@ -73,5 +73,5 @@
   </div>
   <!-- Store the logo information in a hidden img for the JS -->
   <img src="{{ $mainLogo | relURL }}" class="d-none" id="main-logo">
-  <img src="{{ $invertedLogo | relURL }}" class="d-none" id="inverted-logo">
+  <!-- <img src="{{ $invertedLogo | relURL }}" class="d-none" id="inverted-logo"> -->
 </nav>
