--- a/themes/toha/layouts/partials/footer.html
+++ b/themes/toha/layouts/partials/footer.html
@@ -74,12 +74,12 @@
   <hr />
   <div class="container">
     <div class="row text-left">
-      <div class="col-md-4">
+      <!-- <div class="col-md-4">
         <a id="theme" href="https://github.com/hossainemruz/toha" target="#">
-          <!-- <img src="{{ "/assets/images/inverted-logo.png" | relURL }}"> -->
+          <img src="{{ "/assets/images/inverted-logo.png" | relURL }}">
           Toha
         </a>
-      </div>
+      </div> -->
       <div class="col-md-4 text-center">{{ $copyrightNotice }}</div>
       <!-- <div class="col-md-4 text-right">
         <a id="hugo" href="https://gohugo.io/">{{ i18n "hugoAttributionText" }}
